# ml-based-anomaly-detection

./: .gitignore  .pypirc.py  .travis.yml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
notebook/: example-01.ipynb
sr/: __init__.py  sr.py  util.py
sranodec/: __init__.py  silency.py  util.py
tests/: test_silency.py
tests/mock/: srdata.py
