[metadata]
name = sr
maintainer = Takahiro Yoshinaga
maintainer_email = t.yoshinaga0106@gmail.com
version = 0.0.1
description = Anonmaly Detection for Spectral Residual
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/yoshinaga0106/sr

[options]
package_dir==.
packages=find:
install_requires =
  pandas
  matplotlib
  numpy
  scipy
